# solvx-databricks-utils

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: tests.yml
databricks/: databricks.yml
databricks/bundles/: download-pipeline.yml
debug/: Import_json.ipynb  ingestion.ipynb  ingestion_download_api.ipynb  ingestion_setup.ipynb  logger.ipynb  pip_install_dbx.ipynb  pip_install_local.ipynb  pip_install_package.ipynb
notebooks/: 0. first time set-up.ipynb  1. prepare volume.ipynb  2. prepare endpoints.ipynb  3. download api.ipynb  4. load data to delta.ipynb
scripts/: update-wheel.ps1
src/dbx_utils/: __init__.py
src/dbx_utils/ingest/: __init__.py  download_api.py  ingest_setup.py  step_0_prepare_architecture.py  volume_to_delta.py
src/dbx_utils/logging/: __init__.py
tests/: test_logger.py
